# msa-ui-qt

./: CMakeLists.txt  CPackSettings.cmake  msaui.qrc
res/: style.css
src/: injectjs.js  loginipcservice.cpp  loginipcservice.h  loginuihandler.cpp  loginuihandler.h  macosutil.h  macosutil.mm  main.cpp  materialbusyindicator.cpp  materialbusyindicator.h  msadaemonmanager.cpp  msadaemonmanager.h  pickaccountwindow.cpp  pickaccountwindow.h  profilepicturemanager.cpp  profilepicturemanager.h  webloginwindow.cpp  webloginwindow.h
